--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"flowbite": "^1.5.5",
 		"svelte-modals": "^1.2.0",
 		"svelte-notifications": "^0.9.98"
 	}
